# mtg_card_retreiver

./: readme.md
Axel/mtg-search-main/: Cargo.toml  readme.md
Axel/mtg-search-main/src/: collection.rs  colors.rs  main.rs
mtg_trade_tool/: main.py
