[package]
name = "mtg-searcher"
version = "0.1.0"
authors = ["axel paulander <axel.paulander@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ratatui = "0.26.3"
crossterm = "0.27.0"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
anyhow = "1.0.86"
strum = "0.26.2"
csv = "1.3.0"
